--- a/WpfTBQuestGame.S2/WpfTBQuestGame.S2.csproj
+++ b/WpfTBQuestGame.S2/WpfTBQuestGame.S2.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\Map.cs" />
     <Compile Include="Models\Player.cs" />
+    <Compile Include="ObservableObject.cs" />
     <Compile Include="PresentationLayer\GameSessionView.xaml.cs">
       <DependentUpon>GameSessionView.xaml</DependentUpon>
     </Compile>
